apps/stirling-pdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      containers:
        - name: stirling-pdf
          image: docker.stirlingpdf.com/stirlingtools/stirling-pdf:0.46.2
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/v1/info/status
              port: http
          livenessProbe:
            httpGet:
              path: /api/v1/info/status
              port: http
            initialDelaySeconds: 180
          resources:
            requests:
              memory: 500Mi
              cpu: 20m
            limits:
              memory: 1.25Gi
