apps/stirling-pdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/configuration-snippet:
      sub_filter '</head>' '<script src="https://rybbit.nasus.dev/api/script.js" data-site-id="2" defer></script></head>';
      sub_filter_once on;
      sub_filter_types text/html;
spec:
  ingressClassName: nginx
  rules:
    - host: pdf.nasus.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stirling-pdf
                port:
                  name: http
  tls:
    - hosts:
        - pdf.nasus.dev
      secretName: stirling-pdf-tls
